front page content and style

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 
             <div class="row-fluid">
               <div class="span12 story featured black">
-                <img src="http://www.f-b.no/polopoly_fs/truet-med-vapen-og-stakk-av-med-s-nn-2-7.235218!/image/derivative_980/1.7720106.1358024751.jpg" alt="">
+                <a href="#">
+                  <img src="http://www.f-b.no/polopoly_fs/truet-med-vapen-og-stakk-av-med-s-nn-2-7.235218!/image/derivative_980/1.7720106.1358024751.jpg" alt="">
+                </a>
                 <div class="caption">
-                  <h2>- Vi er sikre på at rett mann er pågrepet</h2>
+                  <h2><a href="#">- Vi er sikre på at rett mann er pågrepet</a></h2>
                 </div>
               </div>
             </div>
@@ -69,50 +71,129 @@
             <div class="row-fluid">
               <div class="span4 story">
                 <a href="#">
-                  <img src="holder.js/480x200" alt="">
+                  <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/201311182821209_3.jpg" alt="">
                 </a>
                 <a href="#">
                   <h2>Nittedal IL har alt fått tilbud fra private investorer om kjøp</h2>
                 </a>
               </div>
               <div class="span4 story">
-                <img src="holder.js/480x200" alt="">
-                <h2>Ligger helt i toppen av knipsestatistikk</h2>
-                <p>I snitt ni bilførere hver dag fikk bot.</p>
+                <a href="#">
+                  <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/2013112104548725_3.jpg" alt="">
+                </a>
+                <h2><a href="#">21 av 54 boliger i Kruttverket Hageby solgt.</a></h2>
               </div>
-              <div class="span4 story">
-                <img src="holder.js/480x200" alt="">
-                <h2>21 av 54 boliger i Kruttverket Hageby solgt.</h2>
+              <div class="span4 story most-read">
+
+                <section>
+                    <h3 class="massive">
+                      Mest lest
+                    </h3>
+                  </header>
+                  <ul class="no-indent">
+                    <li class="">
+                      <a href="http://www.aftenposten.no/nyheter/uriks/Tog-kjorte-inn-i-hus-i-Stockholm-7091759.html" class=" webhit_list">
+                        <time>05:06</time>
+                        Tog kjørte inn i hus i Stockholm
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="http://www.aftenposten.no/okonomi/Kundene-svikter-Ica-og-Rimi-7091787.html" class=" webhit_list">
+                        <time>09:07</time>
+                        Kundene svikter Ica og Rimi
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="http://www.osloby.no/nyheter/Vil-fjerne-sykkelfelt-i-sentrum-7091778.html" class=" webhit_list">
+                        <time>07:21</time>
+                        Vil fjerne sykkelfelt i sentrum
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="http://www.osloby.no/nyheter/Slutt-pa-renholdere-med-500000-i-arslonn-7091631.html" class=" webhit_list">
+                        <time>20:07</time>
+                        Slutt på renholdere med 500.000 i årslønn
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="http://www.aftenposten.no/nyheter/uriks/13-aring-tyvlante-farens-Mercedes_-kjorte-gjennom-halve-Europa-7091790.html" class=" webhit_list">
+                        <time>08:09</time>
+                        13-åring tyvlånte farens Mercedes
+                      </a>
+                    </li>
+                  </ul>
+                </section>
+
               </div>
             </div>
             <hr>
             <div class="row-fluid">
-              <div class="span4">
-                <img src="holder.js/480x300" alt="">
+              <div class="span4 story">
+                <img src="holder.js/480x400/text:Annonse" />
               </div>
               <div class="span8">
-                <img src="holder.js/770x300" alt="">
+                <div id="myCarousel" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="holder.js/770x400/text:Fra avisen" alt="">
+                      <div class="carousel-caption">
+                        <h4>First Thumbnail label</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="holder.js/770x400" alt="">
+                      <div class="carousel-caption">
+                        <h4>Second Thumbnail label</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+                  <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                </div>
               </div>
             </div>
             <hr>
             <div class="row-fluid show-grid">
-              <div class="span6">
+              <div class="span6 story">
                 <img src="holder.js/570x300" alt="">
               </div>
-              <div class="span6">
+              <div class="span6 story">
                 <img src="holder.js/570x300" alt="">
               </div>
             </div>
             <hr>
             <div class="row-fluid">
-              <div class="span4">
-                <img src="holder.js/480x200" alt="">
+              <div class="span3 story">
+                <h3 class="massive">Gratulerer</h3>
+                <div id="myCarousel" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1273&fileName=Tor%20Ingar%20Granrud.jpg" alt="">
+                      <div class="carousel-caption">
+                        <h4>Richard 69 år!</h4>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1273&fileName=Elise%2012%20%C3%A5r.jpg&portalid=11&i=19034&q=1" alt="">
+                      <div class="carousel-caption">
+                        <h4>Second Thumbnail label</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+                  <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                </div>
               </div>
-              <div class="span4">
-                <img src="holder.js/480x200" alt="">
+              <div class="span3 story">
+                <img src="holder.js/480x300" alt="">
               </div>
-              <div class="span4">
-                <img src="holder.js/480x200" alt="">
+              <div class="span3 story">
+                <img src="holder.js/480x300" alt="">
+              </div>
+              <div class="span3 story">
+                <img src="holder.js/480x300" alt="">
               </div>
             </div>
             <hr>
@@ -120,17 +201,17 @@
 
 
         <div class="row">
-          <div class="span4">
+          <div class="span4 story">
             <h4>Heading</h4>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details &raquo;</a></p>
           </div>
-          <div class="span4">
+          <div class="span4 story">
             <h4>Heading</h4>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details &raquo;</a></p>
           </div>
-          <div class="span4">
+          <div class="span4 story">
             <h4>Heading</h4>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn" href="#">View details &raquo;</a></p>
@@ -138,29 +219,6 @@
         </div>
 
         <hr>
-
-
-        <div id="myCarousel" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="holder.js/1170x400" alt="">
-              <div class="carousel-caption">
-                <h4>First Thumbnail label</h4>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img src="holder.js/1170x400" alt="">
-              <div class="carousel-caption">
-                <h4>Second Thumbnail label</h4>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              </div>
-            </div>
-          </div>
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-        </div>
-
 
       </div> <!-- /container -->
 
@@ -212,6 +270,14 @@
           </div>
         </footer>
       </div>
+
+      <!-- Ads -->
+
+      <div class="visible-desktop ads-right">
+        <img src="http://s1.adform.net/Banners/2007196/2007196.gif" />
+      </div>
+
+      <!-- End Ads -->
 
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
       <script src="./js/bootstrap.js"></script>
