front page content and style again

--- a/index.html
+++ b/index.html
@@ -92,31 +92,55 @@
                   </header>
                   <ul class="no-indent">
                     <li class="">
-                      <a href="http://www.aftenposten.no/nyheter/uriks/Tog-kjorte-inn-i-hus-i-Stockholm-7091759.html" class=" webhit_list">
+                      <a href="#" class=" webhit_list">
                         <time>05:06</time>
                         Tog kjørte inn i hus i Stockholm
                       </a>
                     </li>
                     <li class="">
-                      <a href="http://www.aftenposten.no/okonomi/Kundene-svikter-Ica-og-Rimi-7091787.html" class=" webhit_list">
+                      <a href="#">
                         <time>09:07</time>
                         Kundene svikter Ica og Rimi
                       </a>
                     </li>
                     <li class="">
-                      <a href="http://www.osloby.no/nyheter/Vil-fjerne-sykkelfelt-i-sentrum-7091778.html" class=" webhit_list">
+                      <a href="#">
                         <time>07:21</time>
                         Vil fjerne sykkelfelt i sentrum
                       </a>
                     </li>
                     <li class="">
-                      <a href="http://www.osloby.no/nyheter/Slutt-pa-renholdere-med-500000-i-arslonn-7091631.html" class=" webhit_list">
+                      <a href="#" class=" webhit_list">
                         <time>20:07</time>
                         Slutt på renholdere med 500.000 i årslønn
                       </a>
                     </li>
                     <li class="">
-                      <a href="http://www.aftenposten.no/nyheter/uriks/13-aring-tyvlante-farens-Mercedes_-kjorte-gjennom-halve-Europa-7091790.html" class=" webhit_list">
+                      <a href="#">
+                        <time>08:09</time>
+                        13-åring tyvlånte farens Mercedes
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="#">
+                        <time>09:07</time>
+                        Kundene svikter Ica og Rimi
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="#">
+                        <time>07:21</time>
+                        Vil fjerne sykkelfelt i sentrum
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="#" class=" webhit_list">
+                        <time>20:07</time>
+                        Slutt på renholdere med 500.000 i årslønn
+                      </a>
+                    </li>
+                    <li class="">
+                      <a href="#">
                         <time>08:09</time>
                         13-åring tyvlånte farens Mercedes
                       </a>
@@ -157,7 +181,9 @@
             <hr>
             <div class="row-fluid show-grid">
               <div class="span6 story">
-                <img src="holder.js/570x300" alt="">
+                <a href="#">
+                  <img src="http://eas5static.emediate.eu/media/1/1111/22635/30daysPlus_349_620x530.jpg" alt="">
+                </a>
               </div>
               <div class="span6 story">
                 <img src="holder.js/570x300" alt="">
@@ -229,40 +255,40 @@
             <div class="span3">
               <h4>Abonnement</h4>
               <ul>
-                <li><a href="http://minside.f-b.no/pakker">Bestill abonnement</a></li>
-                <li><a href="http://www.f-b.no/f-b-xtra">Se abonnementsfordeler</a></li>
-                <li><a href="http://eavis.f-b.no/">Les avisen digitalt</a></li>
-                <li><a href="http://itunes.apple.com/no/app/fredriksstad-blad-epaper/id409453927?mt=8">Les avisen på iPad</a></li>
-                <li><a href="http://m.f-b.no/">Les avisen på mobil</a></li>
-                <li><a href="http://itunes.apple.com/no/app/fredriksstad-blad-epaper/id409453927?mt=8">Les avisen på iPhone</a></li>
+                <li><a href="#">Bestill abonnement</a></li>
+                <li><a href="#">Se abonnementsfordeler</a></li>
+                <li><a href="#">Les avisen digitalt</a></li>
+                <li><a href="#">Les avisen på iPad</a></li>
+                <li><a href="#">Les avisen på mobil</a></li>
+                <li><a href="#">Les avisen på iPhone</a></li>
               </ul>
             </div>
 
             <div class="span3">
               <h4>Kontakt oss</h4>
               <ul>
-                <li><a href="http://minside.f-b.no/kontakt">Kontakt oss</a></li>
-                <li><a href="http://minside.f-b.no/kontakt/kontakt/skjema?type=1">Tips oss</a></li>
-                <li><a href="http://minside.f-b.no/">Kundeservice</a></li>
-                <li>TLF. 55 80 77 77</li>
+                <li><a href="#">Kontakt oss</a></li>
+                <li><a href="#">Tips oss</a></li>
+                <li><a href="#">Kundeservice</a></li>
+                <li>TLF. 77 77 77 77</li>
               </ul>
             </div>
 
             <div class="span3">
               <h4>Annonsering</h4>
               <ul>
-                <li><a href="http://minside.f-b.no/annonsering">Kundeservice</a></li>
-                <li><a href="http://minside.f-b.no/annonsering">Sett inn annonse</a></li>
+                <li><a href="#">Kundeservice</a></li>
+                <li><a href="#">Sett inn annonse</a></li>
               </ul>
             </div>
 
             <div class="span3">
-              <h4>Om f-b.no </h4>
+              <h4>Om Varingen </h4>
               <ul>
-                <li>Fredriksstad Blad  Copyright &copy; 2013</li>
-                <li>Ansvarlig redaktør: <a href="mailto:erling.omvik@f-b.no">Erling Omvik</a></li>     
-                <li>Nyhetsredaktør: <a href="mailto:rene.svendsen@f-b.no">René Svendsen</a></li>
-                <li>Nett- og utviklingsredaktør: <a href="mailto:espen.normann@f-b.no">Espen Normann</a></li>
+                <li>Varingene Copyright &copy; 2013</li>
+                <li>Ansvarlig redaktør: <a href="#">Erling Omvik</a></li>     
+                <li>Nyhetsredaktør: <a href="#">Kari Nordmann</a></li>
+                <li>Nett- og utviklingsredaktør: <a href="#">Ola Nordmann</a></li>
                 <li><a href="http://presse.no/Etisk-regelverk/Redaktoerplakaten">Redaktørplakaten</a></li>
                 <li><a href="http://www.pfu.no/simple.php">PFU</a></li>
               </ul>
