--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
         </div>
       </div>
 
+      <header>
+        <div class="container visible-desktop">
+          <div class="span3">
+            <img src="http://varingen.no/Portals/11/Varingen/Logo/logo.gif" />
+          </div>
+          <div class="span1">
+            <img src="http://vaer.f-b.no/images/icons/frontpageheader/b_08.png" />
+          </div>
+          <div class="span3">
+            <h4>Hakadal: -14 grader</h4>
+          </div>
+        </div>
+      </header>
+
       <div class="container">
 
           <div class="stories">
