--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
       </header>
 -->
-      <header class="header-white">
-        <div class="container visible-desktop">
+      <header class="header-white visible-desktop">
+        <div class="container">
           <div class="row">
 
             <div class="span3">
@@ -113,6 +113,11 @@
           <img class="visible-desktop" src="http://s1.adform.net/Banners/2007199/2007199.gif" />
         </div>
         -->
+
+        <div class="visible-phone ads-phone">
+          <img src="http://aka-cdn-ns.adtech.de/images/370/Ad8574322St1Sz1027Sq103692297V0Id2.jpg" />
+        </div>
+
         <div class="row-fluid">
           <div class="span12 story featured black">
             <a href="#">
