--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
           <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
               <div class="item active">
-                <img src="https://dl.dropbox.com/u/608153/assets/ski.jpg" alt="">
+                <a href="#myModal" role="button" data-toggle="modal">
+                  <img src="https://dl.dropbox.com/u/608153/assets/ski.jpg" alt="">
+                </a>
                 <div class="carousel-caption">
                   <h4>Les fra avisutgaven</h4>
                   <p>Hans Christer Holund viste konkurrentene ryggen under helgas kretsmesterskap i Oslo. Han var best både i klassisk og fristil.</p>
@@ -249,6 +251,21 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal -->
+      <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h3 id="myModalLabel">Abonnér på Varingen</h3>
+        </div>
+        <div class="modal-body">
+          <p>For å lese denne artikkelen, må du være abonnent. Klikk videre for å se priser og få umiddelbar tilgang.</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary">Ja, jeg vil ha tilgang nå</button>
+        </div>
+      </div>
+
       <hr>
       <div class="row-fluid show-grid">
         <div class="span6 story">
@@ -299,19 +316,13 @@
 
     <div class="row">
       <div class="span4 story">
-        <h4>Heading</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <h2>Jan-Erik Olufsen selger driften av utestedet i Hakadal</h2>
       </div>
       <div class="span4 story">
-        <h4>Heading</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <h2>En person ble torsdag ettermiddag sendt til legevakt med mindre skader etter elgpåkjørsel </h2>
       </div>
       <div class="span4 story">
-        <h4>Heading</h4>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <h4>- Sjokkerende at Høyrefolk kan komme med en slik påstand om andre partier</h4>
       </div>
     </div>
 
