--- a/index.html
+++ b/index.html
@@ -234,15 +234,17 @@
                   <img src="https://dl.dropbox.com/u/608153/assets/ski.jpg" alt="">
                 </a>
                 <div class="carousel-caption">
-                  <h4>Les fra avisutgaven</h4>
+                  <h4>- Det var helt fantastisk!</h4>
                   <p>Hans Christer Holund viste konkurrentene ryggen under helgas kretsmesterskap i Oslo. Han var best både i klassisk og fristil.</p>
                 </div>
               </div>
               <div class="item">
-                <img src="holder.js/770x400" alt="">
+                <a href="#myModal" role="button" data-toggle="modal">
+                  <img src="holder.js/770x400" alt="">
+                </a>
                 <div class="carousel-caption">
-                  <h4>Second Thumbnail label</h4>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                  <h4>Ikke helt i toppen</h4>
+                  <p>Hakadølene hevdet seg ikke helt i toppen da første kvalikrenn til Hovedlandsrennet i alpint ble arrangert i Bærum onsdag kveld.</p>
                 </div>
               </div>
             </div>
@@ -274,7 +276,7 @@
           </a>
         </div>
         <div class="span6 story">
-          <img src="holder.js/570x486/text:Annonse" alt="">
+          <img src="http://eas5static.emediate.eu/media/1/100/31823/620x530_STE_02-13_no.jpg" alt="">
         </div>
       </div>
       <hr>
@@ -284,15 +286,15 @@
           <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
               <div class="item active">
-                <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1273&fileName=Tor%20Ingar%20Granrud.jpg" alt="">
+                <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1274&fileName=Julia%204%20%C3%A5r.jpg&portalid=11&i=19061&q=1" alt="">
                 <div class="carousel-caption">
-                  <h4>Richard 69 år!</h4>
+                  <h4>Lene 8 år</h4>
                 </div>
               </div>
               <div class="item">
-                <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1273&fileName=Elise%2012%20%C3%A5r.jpg&portalid=11&i=19034&q=1" alt="">
+                <img src="http://www.varingen.no/DesktopModules/SimpleGallery/ImageHandler.ashx?width=283&height=283&HomeDirectory=%2FPortals%2F11%2FGallery%2FAlbum%2F1274&fileName=Marie%206%20%C3%A5r.jpg&portalid=11&i=19063&q=1" alt="">
                 <div class="carousel-caption">
-                  <h4>Second Thumbnail label</h4>
+                  <h4>Marie 6 år</h4>
                 </div>
               </div>
             </div>
@@ -301,28 +303,30 @@
           </div>
         </div>
         <div class="span3 story">
-          <img src="holder.js/480x300" alt="">
+          <img src="holder.js/480x300/text:Annonse" alt="">
         </div>
         <div class="span3 story">
-          <img src="holder.js/480x300" alt="">
+          <img src="holder.js/480x300/text:Annonse" alt="">
         </div>
         <div class="span3 story">
-          <img src="holder.js/480x300" alt="">
+          <img src="holder.js/480x300/text:Annonse" alt="">
         </div>
       </div>
       <hr>
     </div>
 
 
-    <div class="row">
+    <div class="row main">
       <div class="span4 story">
-        <h2>Jan-Erik Olufsen selger driften av utestedet i Hakadal</h2>
+        <h2><a href="#">Jan-Erik Olufsen selger driften av utestedet i Hakadal</a></h2>
+        <p>Klarer ikke lenger å håndtere kommunens krav</p>
       </div>
       <div class="span4 story">
-        <h2>En person ble torsdag ettermiddag sendt til legevakt med mindre skader etter elgpåkjørsel </h2>
+        <h2><a href="#">En person ble torsdag ettermiddag sendt til legevakt med mindre skader etter elgpåkjørsel</a></h2>
+        <p>- Plutselig stod den i veien!</p>
       </div>
       <div class="span4 story">
-        <h4>- Sjokkerende at Høyrefolk kan komme med en slik påstand om andre partier</h4>
+        <h2><a href="#">- Sjokkerende at Høyrefolk kan komme med en slik påstand om andre partier</a></h2>
       </div>
     </div>
 
