--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
+            <a class="visible-phone mobile-logo" href="#"><img src="img/assets/logo-varingen-mobile.gif" width="85" /></a>
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class=""><a href="#"><i class="icon-user"></i> Logg inn</a></li>
