--- a/story.html
+++ b/story.html
@@ -26,46 +26,6 @@
 </head>
 
 <body class="full-story">
-  <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="visible-phone mobile-logo" href="#"><img src="img/assets/logo-varingen-mobile.gif" width="85" /></a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class=""><a href="#"><i class="icon-user"></i> Logg inn</a></li>
-                <li><a href="#about">Abonnér</a></li>
-                <li><a href="#contact">Sett inn annonse</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-  </div>
-
-  <header class="header-white visible-desktop">
-        <div class="container">
-          <div class="row">
-
-            <div class="span3">
-              <img class="logo" src="http://varingen.no/Portals/11/Varingen/Logo/logo.gif" />
-            </div>
-            
-            <div class="searchbox">
-              <form class="form-search">
-                <input type="text" class="input-medium search-query">
-                <button type="submit" class="btn">Søk</button>
-              </form>
-            </div>
-            <div class="weather">
-              <img src="http://vaer.f-b.no/images/icons/frontpageheader/b_08.png" />
-            </div>
-          </div>
-        </div>
-  </header>
 
   <div class="container menu visible-desktop">
       <nav>
@@ -89,9 +49,11 @@
             
             <h1 class="side-padding">Badertscher på femte i historisk finale</h1>
 
-            <div class="updated side-padding">
-              <span>7 timer siden</span>
+            <div class="byline side-padding">
+              <p class="date relative-time">7 timer siden</p>
             </div>
+
+            <hr>
 
             <div class="article-top-img">
               <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/20131281539819_3.jpg" alt="">
@@ -100,11 +62,9 @@
               </figcaption>
             </div>
 
-            <div class="summary side-padding">
-              <p>
+            <p class="intro">
                 Ulrik Badertscher var en av tre nordmenn i big air-finalen under X-games i Aspen.
-              </p>
-            </div>
+            </p>
 
             <div class="story-text side-padding">
               <p>Med tre nordmenn blant de seks deltakerne i finalen lå det an til norsk gull. Det ble ikke bare norsk, men historisk.
