--- a/story-b.html
+++ b/story-b.html
@@ -6,7 +6,7 @@ title: Det gode liv i Liverpool
     <div class="story-inner" role="main">
         <h1>Det gode liv i Liverpool</h1>
         <div class="byline">  
-            <p class="date" data-seconds="1360229266"> <strong>7 Februar 2013</strong>  Last updated at 09:27
+            <p class="date" data-seconds="1360229266"> <strong>7. februar 2013</strong>  Sist oppdatert 09:27
             </p>  
         </div> 
 
